Updated 15. Classes and oops (markdown)

--- a/15.-Classes-and-oops.md
+++ b/15.-Classes-and-oops.md
@@ -68,6 +68,9 @@ In above code we create a handle h1 for class home and check it is null or not. 
 
 -------------------------------------------------------------------------------------
 
+**Github lab link**:  
+**Github logfile link**:  
+
 ## class object:-  
 
 An object is an instance of that class. An object is used by first declaring a variable of that class type (that holds an object handle) and then creating an object of that class (using the new() function) and assigning it to the variable.  
@@ -81,11 +84,11 @@ The above statement will create an object and assign to handle h1. We can create
 
 There are 2 ways to creat an object:-  
 **1.** Two step process:  
-**   -step-1:** `home h1;`  
-**   -step-2:** `h1 = new();`  
+   -**step - 1:** `home h1;`  
+   -**step - 2:** `h1 = new();`  
 
 **2.** One step process:
-**step-1:** `home h1 = new();`  
+   -**step - 1:** `home h1 = new();`  
 
 **code snippet**:-  
 
@@ -118,6 +121,9 @@ endmodule
 On below fig-2 we can see that after create an object the memory to a class handle was created so it display object is not empty.  
 
 -------------------------------------------------------------------------------------
+
+**Github lab link**:  
+**Github logfile link**:  
 
 ## Class constructor:-  
 
@@ -171,18 +177,18 @@ In below fig-3 we see that access the properties and give the value of light = 1
 
 -------------------------------------------------------------------------------------
 
-**Github lab link**: 
-**Github logfile link**:
+**Github lab link**:  
+**Github logfile link**:  
 
 ## This keyword:-  
 
-The **"this"** keyword resolves the ambiguity of a compiler when class properties and arguments passed to class methods are the same. In simple terms, this keyword is a handle of the current class object. It shall be used only in non-static class methods.  
+The **"this"** keyword resolves the ambiguity of a compiler when class properties and arguments passed to class methods are the same. In simple terms, **"this"** keyword is a handle of the current class object. It shall be used only in non-static class methods.  
 
 **syntax**:-
 
 `this.<base_class_member>;`  // It has to be used in derived class  
 
-**code snnipet:-**
+**code snippet**:-
 ```
 class base_class;
 
@@ -196,7 +202,6 @@ class base_class;
       this.switch=switch;
       $display("Inside class method :- switch is %0s that's why fan is 0s",switch,fan);
    endfunction
-
 endclass
 
 module check_electricity;
@@ -213,13 +218,13 @@ endmodule
 
 From above example we can see that, fan & switch is class properties and argument of function is same and we assign fan to fan but using this keyword it is differentiate.
 
-**output**:-
+**output**:-  
 In this code we mention the this keyword before the fan and switch then he print the value switch is ON and fan is also ON inside the class as well as outside the class.
 
 ------------------------------------------------------------------------------------
 
-GitHub lab link:
-GitHub logfile link:
+**Github lab link**:  
+**Github logfile link**:  
 
 **what happens if do not use the this keyword in the above code ?**
 
@@ -229,8 +234,8 @@ If did not mention the this keyword before assigning the fan to fan or switch to
 ```
 class base_class;
 
-   string fan ="OFF" ; //define class properties
-   string switch="OFF"; //
+   string fan ="OFF" ; 
+   string switch="OFF";
 
    function void open_electricity();
       string fan="ON";
@@ -239,7 +244,6 @@ class base_class;
       switch=switch;
       $display("Inside class method :- switch is %0s that's why fan is %0s",switch,fan);
    endfunction
-
 endclass
 
 module check_electricity;
@@ -254,13 +258,13 @@ module check_electricity;
 endmodule
 ```
 
-**output**:-
+**output**:-  
 On the below fig we can see that if we did not mention the this keyword then it display inside method switch is ON that's why fan is ON but outside the class it display the switch is OFF that's why fan is OFF.
 
 -----------------------------------------------------------------------------------
 
-GitHub lab link:
-GitHub logfile link:
+**Github lab link**:  
+**Github logfile link**:  
 
 ## super keyword:-  
 
@@ -305,66 +309,57 @@ On below fig we can see that it display the parent class method and child class 
 
 ---------------------------------------------------------------------------------
 
-GitHub lab link:
-GitHub logfile link:
+**Github lab link**:  
+**Github logfile link**:  
 
 ## extern keyword:-  
 
 An **"extern"** keyword is used for methods which provides a facility for class methods to define them outside of the class body. If the method definition is lengthy (many lines of code inside a method), the extern method provides better readability and cleaner implementation of the class.
-An extern keyword is used for method declaration and a class name with a scope resolution operator is used for method definition.
-**Note**:-
--Method definition and declaration should have the same number of argument lists, data types, and argument names.
--For the extern function return type should be the same if used
+An extern keyword is used for method declaration and a class name with a scope resolution operator is used for method definition.  
+**Note**:-  
+-Method definition and declaration should have the same number of argument lists, data types, and argument names.  
+-For the extern function return type should be the same if used.  
 
-syntax:-
+**syntax**:-
 
- //method declaration - extern indicates out-of-body declaration
- 
- extern function <function_name>;
- extern task <task_name>;  
+**Step - 1:** method declaration - extern indicates out-of-body declaration  
 
- //method implementation outside class body using  scope resolution operator  
+`extern function <function_name>;`
+`extern task <task_name>;`  
 
- function <class_name>::<function_name>;
- task <class_name>::<task_name>;
-code snippet :-
+**Step - 2:** method implementation outside class body using  scope resolution operator  
 
-   class home;
-    string switch;
-    string fan = "OFF";
-    extern function void display();
-   endclass
+`function <class_name>::<function_name>;`
+`task <class_name>::<task_name>;`
 
-   function void home::display();
-    string switch="OFF";
-    $display("The switch is %0s that's why fan is %0s",fan,switch);
-   endfunction
+**code snippet**:-
+```
+class home;
+   string switch;
+   string fan = "OFF";
+   extern function void display();
+endclass
 
-   module extern_example;
-    home h;
-    initial begin
-     h=new();
-     h.display;
-    end
-   endmodule 
-output :
+function void home::display();
+   string switch="OFF";
+   $display("The switch is %0s that's why fan is %0s",fan,switch);
+endfunction
+
+module extern_example;
+   
+   home h;
+   
+   initial begin
+      h=new();
+      h.display;
+   end
+endmodule
+```
+
+**output**:-  
 Here class method is define the outside the class but after access it by using class handle it display the switch is OFF that's why fan is also OFF.
 
-
 -------------------------------------------------------------------------------------
 
--------------------------------------------------------------------------------------
-
--------------------------------------------------------------------------------------
-
--------------------------------------------------------------------------------------
-
--------------------------------------------------------------------------------------
-
--------------------------------------------------------------------------------------
-
--------------------------------------------------------------------------------------
-
--------------------------------------------------------------------------------------
-
--------------------------------------------------------------------------------------
+**Github lab link**:  
+**Github logfile link**:  
