Updated 15. Classes and oops (markdown)

--- a/15.-Classes-and-oops.md
+++ b/15.-Classes-and-oops.md
@@ -84,11 +84,11 @@ The above statement will create an object and assign to handle h1. We can create
 
 There are 2 ways to creat an object:-  
 **1.** Two step process:  
-   -**step - 1:** `home h1;`  
-   -**step - 2:** `h1 = new();`  
+**step - 1:** `home h1;`  
+**step - 2:** `h1 = new();`  
 
-**2.** One step process:
-   -**step - 1:** `home h1 = new();`  
+**2.** One step process:  
+**step - 1:** `home h1 = new();`  
 
 **code snippet**:-  
 
@@ -317,8 +317,8 @@ On below fig we can see that it display the parent class method and child class 
 An **"extern"** keyword is used for methods which provides a facility for class methods to define them outside of the class body. If the method definition is lengthy (many lines of code inside a method), the extern method provides better readability and cleaner implementation of the class.
 An extern keyword is used for method declaration and a class name with a scope resolution operator is used for method definition.  
 **Note**:-  
--Method definition and declaration should have the same number of argument lists, data types, and argument names.  
--For the extern function return type should be the same if used.  
+**1.** Method definition and declaration should have the same number of argument lists, data types, and argument names.  
+**2.** For the extern function return type should be the same if used.  
 
 **syntax**:-
 
