Updated 10.Scheduler schematics (markdown)

--- a/10.Scheduler-schematics.md
+++ b/10.Scheduler-schematics.md
@@ -1,4 +1,4 @@
-# Scheduler schematic:
+# Scheduler schematic
 
 The scheduling schematics are used to describe the element's behavior and their interaction with each other. This interaction is described for event   execution and its scheduling. It is important to note that Verilog and System Verilog is like a parallel programming language in terms of blocks or  
 process executions.
@@ -187,7 +187,7 @@ Postponed region PLI events are also scheduled in this region.
 
 There is no feedback path from the Postponed region back into the RTL or Reactive-loop regions, so the values displayed and the coverage collected will be the final values for that time slot.  
 
-## Blocking and non-blocking statement -  
+## Blocking and non-blocking statement  
 
 **Blocking statement**  
 Blocking statements are assigned with =. It will execute serially in procedural blocks. Blocking statements are executed in a block in a sequential manner but when more than two procedural blocks, these statements will execute parallelly in the blocks and will not block the statements of other procedural blocks.
