Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -318,20 +318,21 @@ On below fig we can see that it display the parent class method and child class 
 
 An **"extern"** keyword is used for methods which provides a facility for class methods to define them outside of the class body. If the method definition is lengthy (many lines of code inside a method), the extern method provides better readability and cleaner implementation of the class.
 An extern keyword is used for method declaration and a class name with a scope resolution operator is used for method definition.  
+
 **Note**:-  
-** Method definition and declaration should have the same number of argument lists, data types, and argument names.  
-** For the extern function return type should be the same if used.  
+* Method definition and declaration should have the same number of argument lists, data types, and argument names.  
+* For the extern function return type should be the same if used.  
 
 **syntax**:-
 
 **Step - 1:** method declaration - extern indicates out-of-body declaration  
 
-`extern function <function_name>;`
+`extern function <function_name>;`  
 `extern task <task_name>;`  
 
 **Step - 2:** method implementation outside class body using  scope resolution operator  
 
-`function <class_name>::<function_name>;`
+`function <class_name>::<function_name>;`  
 `task <class_name>::<task_name>;`
 
 **code snippet**:-
