Updated 14.Constraint (markdown)

--- a/14.Constraint.md
+++ b/14.Constraint.md
@@ -1647,6 +1647,346 @@ The probability of taking the second is (2/7) i.e. 0.285, and the probability of
 ***
 
 
+## Memory partition using constraints
+
+### Memory block randomization
+
+Assume that you have a memory of size 2048 i.e., 2KB in design to store some data, then if we need some block of that 2KB memory for some purpose, for partitioning that memory we can use constraints.
+
+**Example:**
+
+          class memory_block;
+            bit [31:0] mem_ram_start,mem_ram_end;
+            rand bit [31:0] mem_start_addr,mem_end_addr;
+            rand int mem_block_size;
+            constraint mem {mem_start_addr>=mem_ram_start;
+                            mem_start_addr<mem_ram_end;
+                            mem_start_addr%4==0;
+                            mem_end_addr==mem_start_addr+mem_block_size-1;}
+
+            constraint block_size {mem_block_size inside {32,64};}
+
+            function void display();
+              $display("\t----memory block----");
+              $display("\t RAM start addr : %0d",mem_ram_start);
+              $display("\t RAM end addr : %0d",mem_ram_end);
+              $display("\t BLOCK start addr : %0d",mem_start_addr);
+              $display("\t BLOCK end addr : %0d",mem_end_addr);
+              $display("\t BLOCK SIZE:%0d",mem_block_size);
+            endfunction
+
+          endclass
+
+          module single_memory_block();
+            memory_block memb =new();
+            initial
+            begin
+              memb.mem_ram_start=32'h0;
+              memb.mem_ram_end=32'h7ff;
+              void'(memb.randomize());
+              memb.display();
+            end
+          endmodule
+
+In the above example,we took start address is 0 and end address is 2047, and gave constraints such that the block size should be of either 32, 64(int).The block should start at multiple of 4 and should end depending on the block_size.
+
+**output:**  
+
+![single memory output](https://user-images.githubusercontent.com/110412468/191540532-a0b26722-914a-4916-b099-3674aaf5df03.png)  
+
+![single mem](https://user-images.githubusercontent.com/110412468/191540633-9194f978-16df-4e0d-b355-6c517d527f42.png)
+
+        Fig.  
+
+The output of the above example is shown in above diagram, for constraint of block size , solver gave 64.Based on this block size the solver will give a start address such that the memory block will be within the range of 2KB. here gave it as 1896 which is multiple of 4 and from there 64 it will be 1959 as end address.
+
+**Github lab code link:**
+**Github lab output link:**
+
+***
+
+### Memory n equal partitions 
+
+Here we will try to divide the given memory into n equal parts of partitions.
+
+**Example:**
+
+          class memory_block;
+            bit [31:0] mem_ram_start,mem_ram_end;
+            rand int mem_num_parts,mem_part_size;
+            rand bit [31:0] mem_part_start[];
+            constraint parts {mem_num_parts>=2;
+                              mem_num_parts<=8;}
+
+            constraint part_size {mem_part_size==(mem_ram_end-mem_ram_start)/mem_num_parts+1;}
+
+            constraint patition {mem_part_start.size()==mem_num_parts;
+                                 foreach(mem_part_start[i])
+                                 if(i)
+                                   mem_part_start[i]==mem_part_start[i-1]+mem_part_size;
+                                 else
+                                  mem_part_start[i]==mem_ram_start;}
+            function display();
+              $display("\t RAM start addr : %0d ",mem_ram_start);
+              $display("\t RAM end addr : %0d ",mem_ram_end);
+              $display("\t No of Partitions : %0d ",mem_num_parts);
+              $display("\t Size of each partition : %0d ",mem_part_size);
+              $display("\n\t -----------partitions----------- ");
+              foreach(mem_part_start[i])
+              begin
+                if(i==mem_num_parts-1)
+                   $display("\t Partition : %0d from %0d to %0d ",i+1,mem_part_start[i],mem_ram_end);
+                else
+                   $display("\t Partition : %0d from %0d to %0d ",i+1,mem_part_start[i],mem_part_start[i+1]-1);
+              end
+          endfunction
+
+          endclass
+
+
+          module memory_n_equal_partitions();
+              memory_block memb=new();
+            initial
+            begin
+              memb.mem_ram_start=32'h0;
+              memb.mem_ram_end=32'h7ff;
+              void'(memb.randomize());
+              void'(memb.display());
+            end
+          endmodule  
+
+
+
+In the above example, we have taken a memory of 2KB and tried to make it into n equal partitions.  
+
+output:  
+
+![mem n equal parts](https://user-images.githubusercontent.com/110412468/191571884-5e245db2-a4dd-487a-8041-d7f0cfadbba7.png)  
+
+
+![n equal](https://user-images.githubusercontent.com/110412468/191571964-483c6f9e-787d-47a7-bd10-e6a152df9c94.png)
+
+          Fig.  
+
+All the constraints are solved in parallel, here let's say first took a number between 2 & 8 i.e., 7 in this case, and then divide the whole memory by 7 i.e., 293 which will be almost equal to 2KB. Here we tried to assign the start address of every part using the array and each part with space 293 each.  
+
+**Github lab code link:**
+**Github lab output link:**
+
+***
+
+### Memory n variable partitions 
+
+In the following example, we are trying to divide one block of memory into n partitions but need not to be equal.
+
+Example:
+
+          class memory_block;
+            bit [31:0] mem_ram_start,mem_ram_end;
+            rand int mem_num_parts,mem_part_size[];
+            rand bit [31:0] mem_part_start[];
+            constraint parts {mem_num_parts>=2;
+                              mem_num_parts<=8;}
+            constraint part_sizes {mem_part_size.size()==mem_num_parts;
+                                   mem_part_size.sum()==mem_ram_end-mem_ram_start+1;
+                                   foreach(mem_part_size[i])
+                                     mem_part_size[i] inside {16,32,64,128,256,512,1024,2048,4096};
+                                   }
+            constraint partition {mem_part_start.size()==mem_num_parts;
+                                  foreach(mem_part_start[i])
+                                  if(i)
+                                   mem_part_start[i]==mem_part_start[i-1]+mem_part_size[i-1];
+                                  else
+                                   mem_part_start[i]==mem_ram_start;}
+            function display();
+              $display("\t RAM start addr : %0d ",mem_ram_start);
+              $display("\t RAM end addr : %0d ",mem_ram_end);
+              $display("\t No of Partitions : %0d ",mem_num_parts);
+              $display("\n\t -----------partitions-----------");
+              foreach(mem_part_start[i])
+              begin
+                if(i==mem_num_parts-1)
+                $display("\t Partition : %0d with size :%0d from %0d to %0d ",i,mem_part_size[i],mem_part_start[i],mem_ram_end);
+                else
+                $display("\t Partition : %0d with size :%0d from %0d to %0d ",i,mem_part_size[i],mem_part_start[i],mem_part_start[i+1]-1);
+              end
+          endfunction
+          endclass
+
+          module memory_n_var_partitions();
+              memory_block memb=new();
+            initial
+            begin
+              memb.mem_ram_start=32'h0;
+              memb.mem_ram_end=32'h3fff;
+              void'(memb.randomize());
+              void'(memb.display());
+            end
+          endmodule  
+
+Here the memory size given is 16KB, then taking a constraint to divide by n parts i.e., 8 parts in this example. One more constraint is given such that the total sum of all the n variant partitions and allocated the particular sizes for partitions using foreach constraint.The divisions of the partitions are shown in the following diagram.
+
+**output:**  
+
+![mem n var parts output](https://user-images.githubusercontent.com/110412468/191576440-c50754f1-f41c-4a9b-98d3-76d16bf96a0c.png)  
+
+![mem n var parts](https://user-images.githubusercontent.com/110412468/191576490-3d26a98a-6813-491a-924c-1417107d3da8.png)  
+
+
+***
+
+### Memory partitions with spaces in between  
+
+In this example, it was similar to the previous example like dividing n variable partitions but here adding space parts also in between the partitions .
+
+**Example:**  
+
+          class memory_block;
+            bit [31:0] mem_ram_start,mem_ram_end;
+            rand int mem_num_parts,mem_part_size[],mem_space[];
+            rand bit [31:0] mem_part_start[];
+            constraint parts {mem_num_parts>4;
+                              mem_num_parts<10;}
+            constraint part_sizes {mem_part_size.size()==mem_num_parts;
+                                   mem_space.size()==mem_num_parts-1;
+                                   mem_part_size.sum()+mem_space.sum()==mem_ram_end-mem_ram_start+1;
+                                   foreach(mem_part_size[i])
+                                   {
+                                      mem_part_size[i] inside {256,512,1024,2048};
+                                      if(i<mem_space.size())
+                                        mem_space[i] inside {64,256,512,1024};
+                                    }
+                                   }
+            constraint partition {mem_part_start.size()==mem_num_parts;
+                                  foreach(mem_part_start[i])
+                                  if(i)
+                                   mem_part_start[i]==mem_part_start[i-1]+mem_part_size[i-1];
+                                  else
+                                   mem_part_start[i]==mem_ram_start;}
+            function display();
+              $display("\tRAM start addr : %0d ",mem_ram_start);
+              $display("\tRAM end addr : %0d ",mem_ram_end);
+              $display("\tNo of Partitions : %0d ",mem_num_parts);
+              $display("\tmem_part_size : %0p",mem_part_size);
+              $display("\tmem_space : %0p",mem_space);
+              $display("\n\t %c[1;32m-----------%c[1;34mpartitions%c[1;32m------------%c[0m",27,27,27,27);
+              foreach(mem_part_start[i])
+              begin
+                if(i==mem_num_parts-1)
+                $display("\t%c[0;34m Partition : %0d with size :%0d from %0d to %0d %c[0m\n"
+                           ,27,i,mem_part_size[i],mem_part_start[i]+mem_space[i-1],mem_ram_end,27);
+                else if(i==0)
+                  $display("\t%c[0;34m Partition : %0d with size :%0d from %0d to %0d %c[1;31m
+                             \n\t\tspace_part : %0d bytes ",27,i,mem_part_size[i],mem_part_start[i],
+                             mem_part_start[i+1]-1,27,mem_space[i]);
+      else
+         $display("\t%c[0;34m Partition : %0d with size :%0d from %0d to %0d %c[1;31m 
+                    \n\t\tspace_part : %0d bytes",27,i,mem_part_size[i],
+                    mem_part_start[i]+mem_space[i-1],mem_part_start[i+1]-1,27,mem_space[i]);
+
+                end          
+          endfunction
+          endclass
+
+
+          module memory_partition_with_spaces();
+              memory_block memb=new();
+            initial
+            begin
+              memb.mem_ram_start=32'h0;
+              memb.mem_ram_end=32'h23ff;
+              void'(memb.randomize()with{mem_num_parts==5;});
+              void'(memb.display());
+          end
+          endmodule
+
+In the above example, memory is 9KB, we have taken 5 memory parts as inline constraints and space partition between every two parts, which means the total will be 9 parts. Here we are taking those all parts sum should be equal to 9215. The starting addresses of the memory partition are stored in one array and assigned different sizes using inside constraints and the same with the parts of the space also. The final memory block looks like the following diagram. If any of the constraints is not satisfying then there will be no randomization done and every value will be having default value i.e., 0
+
+**output:**  
+
+![mem with spaces output](https://user-images.githubusercontent.com/110412468/191585917-609bf833-825b-4eb0-9d39-727a5427a86b.png)  
+
+![mem spaces](https://user-images.githubusercontent.com/110412468/191585941-95846a19-a196-4ba1-b3bc-6fbdc1a5ce37.png)  
+
+
+***
+
+### Partitions for program and data
+
+In the following example, memory is made into n partitions of program and data and spaces in between 
+
+**Example:**
+
+          class memory_block;
+            int total_mem;
+            rand int pgm[],data[],space[];
+            rand int max_pgms,max_pgm_size,max_data_size;
+            rand int num_pgm,num_data,num_space;
+          
+            constraint nums {num_pgm inside {[1:max_pgms]};
+                             num_data inside {[1:10]};
+                             num_space inside {[1:10]};}
+
+            constraint maxs {max_pgms==10;
+                             max_pgm_size==512;
+                             max_data_size==128;}
+
+            constraint arrays {pgm.size()==num_pgm;
+                               data.size()==num_data;
+                               space.size()==num_space;}
+
+            constraint ram {foreach(pgm[i])
+                                {
+                                  pgm[i] dist {[128:512]:=75,[32:64]:/20};
+                                   pgm[i]%4 ==0;
+                                }
+                            foreach(data[i])
+                              {
+                                 data[i] inside {64};
+                              }
+
+                            foreach(space[i])
+                                {
+                                 space[i] inside {64,128,512};
+                                }
+                          total_mem == pgm.sum()+data.sum()+space.sum();
+                              }
+
+            function void display();          
+              $display("\tTotal_RAM : %0d ",total_mem);
+              $display("\tNo.of Programs : %0d ",num_pgm);
+              $display("\tNo.of data's : %0d ",num_data);
+              $display("\tNo.of space's : %0d ",num_space);
+              $display("\tTotal_program_size : %0d , Total_data_size : %0d Total_space_size : %0d \n",pgm.sum(),data.sum(),space.sum());
+              foreach(pgm[i])
+                $display("\t %c[1;32m Program_%0d is of %0d bytes %c[0m",27,i,pgm[i],27);
+              foreach(data[i])
+                $display("\t %c[1;33m data_%0d is of %0d bytes %c[0m",27,i,data[i],27);
+              foreach(space[i])
+                $display("\t %c[1;34m space_%0d is of %0d bytes %c[0m",27,i,space[i],27);
+            endfunction
+          endclass
+
+
+          module memory_pgm_data();          
+            memory_block mb;
+            initial
+            begin
+              mb =new();
+              mb.total_mem=6144;
+              void'(mb.randomize());
+              mb.display();
+            end
+
+          endmodule
+
+In this, we have used constraints such that the total programs, data, and space of all sizes should be equal to the size of the memory block of 6KB.here we gave the constraints to choose the number of program blocks, data blocks, and space blocks. here it came as 10 programs, 2 data blocks, and 5 space blocks. And also the program, space, and data sizes are assigned using foreach and inside constraints.If any of the constraints fails then the whole randomization will be stopped.
+
+**output:**  
+
+![mem prgrm space output](https://user-images.githubusercontent.com/110412468/191595367-2c614be3-d9c4-4b26-83c6-dc57e4d45976.png)  
+
+
 
  
 
