Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -1207,4 +1207,52 @@ endmodule:prot
 By default if we does not define any attributes with keywords **'local'** and **'protected'**, then by default it is **'public'**. It provides full access to all attributes and methods to child classes.
 
 **code snippet**:-
+```
+ class parent;
+   bit [3:0] a,b;
+   bit[5:0] c;
+   int d = 5;
+
+   function int sum(bit[4:0]val1,val2);
+     c = val1 + val2;
+     return c;
+   endfunction:sum
+
+   function void display();
+     $display("sum = %0d",c);
+     $display("1.d = %0d",d);
+   endfunction:display
+
+ endclass:parent
+
+ class child extends parent;
+
+   function void disp();
+     $display("2.d = %0d",d);
+   endfunction
+
+ endclass:child
+
+
+ module pub();
+
+  parent p;
+  child c1;
+  int e;
+
+  initial begin
+    p = new();
+    c1 = new();
+    e = p.sum(1010,0101);
+    p.display();
+    c1.d = 10;
+    c1.disp();
+  end
+
+ endmodule:pub
+```
+**Output**:-
  
+![public new](https://user-images.githubusercontent.com/110398433/191605400-5f2d2c8a-6a5b-4354-94b6-452898a8d5b1.png)
+
+          Fig-
