Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -1253,6 +1253,7 @@ By default if we does not define any attributes with keywords **'local'** and **
 ```
 **Output**:-
  
-![public new](https://user-images.githubusercontent.com/110398433/191605400-5f2d2c8a-6a5b-4354-94b6-452898a8d5b1.png)
+![pub_new](https://user-images.githubusercontent.com/110398433/191605847-6dad8ba4-d9ed-4589-9127-4f90e9cc2b18.png)
+
 
           Fig-
