Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -1037,6 +1037,9 @@ A **virtual** method inside an abstract class can be declared by keyword **'pure
 
 Encapsulation is the technique of hiding data the data within the class and making it available only through the methods. It seals the data and allows only access to trusted users(i.e., by the methods of the class).
 
+![Encap](https://user-images.githubusercontent.com/110398433/191607936-cfdfafbb-6245-436e-82e7-3207cf83cb95.png)
+
+
           Fig- 
 
 ### Local
