Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -831,9 +831,7 @@ Both static methods and static members in a class can be accessed without creati
 
 
 
-# Classes
-
-## Inheritance 
+# Inheritance 
 
 Inheritance is a mechanism which allows child class to inherit the properties of base-class. Objects of child class will have access to attributes and methods of parent class. If child class inherits parent class, then parent class is called **super-class** and child class is called **subclass**. 
 
@@ -887,7 +885,7 @@ From the above fig-2, we can clearly see that all the instantiation steps are re
 
           Fig-
 
-## Polymorphism
+# Polymorphism
 Polymorphism allows to access the sub-class methods using super-class objects. Any subclass object can be assigned to super-class object. In polymorphism, same handle (or) metthods take different forms.
 
 **code snippet**:-
@@ -947,7 +945,7 @@ Polymorphism allows to access the sub-class methods using super-class objects. A
 
           Fig- 
 
-## Abstract/Virtual class
+# Abstract/Virtual class
 
 Abstract class is a virtual class which cannot be instantiated directly in the program(in other words an object a virtual/abstract class cannot be created). If you try doing so it will throw compile time error. They will be used as a base class to inherit any no of classes. We generally use abstract class to define a prototype in advance, that means an abstract class provides a template for a set of derived classes. So you know you have a basic set of methods/properties that already exist, that makes it simpler for you to focus on the new intent for which you are creating this derived class.
 
@@ -987,9 +985,10 @@ Abstract class is a virtual class which cannot be instantiated directly in the p
 ![abstract-output new](https://user-images.githubusercontent.com/110398433/191521079-4943574c-7576-445f-b785-e7782ce52b8a.png)
 
           Fig-
-### Pure virtual method
+## Pure virtual method
 
 A **virtual** method inside an abstract class can be declared by keyword **'pure'** and is called **pure virtual** method. The class will automatically consider it as abstract class if any **pure virtual** method is used. It should be only added in the base class. In the base class we are not allowed to add any function definition to the pure virtual function. It is important to know that all the derived classes of a base class with pure virtual methods should have implementation of all pure virtual methods individually.
+
 **code snippet**:-
 ```
  virtual class A;
@@ -1033,7 +1032,7 @@ A **virtual** method inside an abstract class can be declared by keyword **'pure
 
           Fig-
 
-## Encapsulation
+# Encapsulation
 
 Encapsulation is the technique of hiding data the data within the class and making it available only through the methods. It seals the data and allows only access to trusted users(i.e., by the methods of the class).
 
@@ -1042,7 +1041,7 @@ Encapsulation is the technique of hiding data the data within the class and maki
 
           Fig- 
 
-### Local
+## Local
 
 A member declared as **'local'** is accessible only to the methods of the same class and will not be able to access by child class.
 
@@ -1094,7 +1093,7 @@ A member declared as **'local'** is accessible only to the methods of the same c
 
           Fig-
 
-#### Errors expected if we access local variable by child class
+### Errors expected if we access local variable by child class
 
 **code snippet**:-
 ```
@@ -1149,7 +1148,7 @@ A member declared as **'local'** is accessible only to the methods of the same c
 
           Fig-
 
-### Protected
+## Protected
 
 Sometimes there will be necessity to access the members of parent class by the child class. This can be done by the keyword **'protected'**. By using **protected**, all the child classes will get the access to the base class members which are data protected.
 
@@ -1205,7 +1204,7 @@ endmodule:prot
 
           Fig-
 
-### Public
+## Public
 
 By default if we does not define any attributes with keywords **'local'** and **'protected'**, then by default it is **'public'**. It provides full access to all attributes and methods to child classes.
 
