Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -1150,7 +1150,7 @@ A member declared as **'local'** is accessible only to the methods of the same c
 
 ## Protected
 
-Sometimes there will be necessity to access the members of parent class by the child class. This can be done by the keyword **'protected'**. By using **protected**, all the child classes will get the access to the base class members which are data protected.
+Sometimes there will be necessity to access the members of parent class by the child class. This can be done by the keyword **'protected'**. By using **protected**, all the child classes will get the access to the base class members which were data protected.
 
 **code snippet**:-
 ```
