Updated 13.Interface (markdown)

--- a/13.Interface.md
+++ b/13.Interface.md
@@ -926,9 +926,24 @@ Calling the actual interface 'intf'  to declare the virtual interface in the cla
 
 Example1: Fulladder 
 
+**Design code of Full adder**
+
+    //Module:fullinput_adder  
+    module fulladder(in_a,in_b,in_c,out_sum,out_carry) ;    
+    //Declaration of input variables
+     input in_a,in_b,in_c;
+     //Declaration of output variables
+      output out_sum;
+      output out_carry;
+    //continuous input_assignment statement
+     assign out_sum = in_a^in_b^in_c;
+     assign out_carry = (in_a&in_b)|(in_b&in_c)| (in_c&in_a);  
+      endmodule:fulladder  
+
   **Interface module of full adder**
 
      interface adder();
+     //declaring the signals
       logic in_a,in_b,in_c;
       logic out_sum,out_carry;
      endinterface
@@ -962,6 +977,22 @@ Example1: Fulladder
       endtask  
      endclass  
  
+**Test module of full adder**
+
+    `//include the driver file  
+      include "driver.sv"  
+      //module:test  
+     module test(adder intf);  
+    //declaring the driver instance  
+     driver drv;  
+     initial  
+     begin  
+     //creating the driver instance  
+     drv = new(intf);  
+    //calling the task run  
+     drv.run();  
+     end  
+    endmodule:test  
 
 **Top module of full adder**
 
